--- a/pom.xml
+++ b/pom.xml
@@ -136,7 +136,12 @@
             <artifactId>jts</artifactId>
             <version>1.12</version>
         </dependency>
-
+<!-- https://mvnrepository.com/artifact/com.google.code.gson/gson -->
+<dependency>
+    <groupId>com.google.code.gson</groupId>
+    <artifactId>gson</artifactId>
+    <version>2.8.8</version>
+</dependency>
     </dependencies>
 
 
